--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-dropzone": "^12.0.4",
     "react-hook-form": "^7.28.1",
     "react-icons": "^4.3.1",
+    "react-imask": "^6.4.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/react-input-mask": "^3.0.1",
     "@types/uuid": "^8.3.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
