--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "@supabase/supabase-js": "^1.35.3",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.11",
-    "next": "12.1.6",
-    "next-pwa": "^5.5.4",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "13.0.0",
+    "next-pwa": "^5.6.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.2.1",
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.4.0",
     "react-imask": "^6.4.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -35,7 +36,7 @@
     "@types/react-input-mask": "^3.0.1",
     "@types/uuid": "^8.3.4",
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "13.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "typescript": "4.7.3"
